candle-einops-macros/tests/ui/fail/duplicate-new-axis.stderr
error: Axis `copy` appears more than once on the right
 --> tests/ui/fail/duplicate-new-axis.rs:4:21
  |
4 |     let _ = einops!("axis -> copy:2 copy:3 axis", ());
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
